# CPLUSPLUS-REF

./: README.md
C++11/: auto.cc  range_based_for.cc
C++98_self_made_library/auto_ptr/: CMakeLists.txt  auto_ptr.cxx
C++98_self_made_library/string/: CMakeLists.txt  string.cxx
Classes/: example01.cpp  example02.cpp  example03.cpp
Classes/Classes/: example07.cpp
Classes/Polymorphism/: example15.cpp
Classes/Singleton/: example13.cpp
Classes/Singleton_1/: example14.cpp
Classes/This_Pointer/: example05.cpp
Classes/acess_specifier/: example04.cpp
Classes/copy_constructor/: example03.cpp
Classes/default_constructor/: example01.cpp
Classes/function_overloading/: example11.cpp
Classes/inheritance/: example10.cpp
Classes/member_initializer_list/: example02.cpp
Classes/operator_overloading/: example12.cpp
Classes/pointer_to_class_object/: example06.cpp
Classes/static_function_member_of_a_class/: example09.cpp  example09.h
Classes/static_member_of_a_class/: example08.cpp
constructor/: ctordtor.cpp
modern_cpp_and_design_patterns/: references.txt
standard_template_libray/: README.md  flags
standard_template_libray/vector/: example1.cpp
standard_template_libray/vector/algorithm/: find.cpp  sort.cpp
